--- a/src/components/ProductItems.css
+++ b/src/components/ProductItems.css
@@ -11,6 +11,35 @@
         
 }
 
+.sort{
+    display: flex;
+    flex-direction: row;
+}
+
+.size {
+    display: flex;
+    flex-direction: row;
+}
+
+.color{
+    width: 100px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    margin:auto;
+    
+}
+
+.Size {
+    width: 100px;
+    height: 25px;
+    margin: auto;
+}
+
+
+
+
+
 .productImg{
 
     background-color: burlywood;
